# caffe_model_encrypt

./: CMakeLists.txt  README.md  caffe.pb.cc  caffe.pb.h  caffe_encrypt.cpp  caffe_encrypt.h  encrypt_tool.cpp
